Fix vertical scrollbar issue.

--- a/inst/www/css/main.css
+++ b/inst/www/css/main.css
@@ -1,5 +1,5 @@
 html, body {
-  height: 100%;
+  height: calc(100% - 50px);
 }
 
 .navbar {
